# de-identification

./: .gitignore  Launch_App.ipynb  Launch_Web_App_Mac.command  README.md  Run_Anonymization_Colab.ipynb  pyproject.toml
src/greek_med_anonymizer/: template_rules.py
